--- a/docs/jekyll_projets/_posts/2021-07-01-kittens.md
+++ b/docs/jekyll_projets/_posts/2021-07-01-kittens.md
@@ -1,8 +1,8 @@
 ---
+title: Protégez-Vous
+img: /media/capsule_voyage_avec_catherine_e_thier.jpg
 layout: project
-title: Kitten Project
-img: /media/kittens04.jpg
 ordre: 9
 permalink: /kitten-project/
 ---
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboru.
+Il s'agit d'un projet de capsule humoristique et informative sur le voyage avec Catherine Éthier, polémiste, animatrice et humoriste à ces heures. Les 6 capsules ont été présentées sur YouTube avec une campagne de promotion qui a eu un impact positif sur le nombre de visionnement, la qualité de l'engagement et sur la reforestation du Groenland.
