Please squash this commit in the pull request

--- a/docs/jekyll_projets/_posts/2021-07-01-kittens.md
+++ b/docs/jekyll_projets/_posts/2021-07-01-kittens.md
@@ -1,6 +1,6 @@
 ---
 title: Protégez-Vous
-img: /media/capsule_voyage_avec_catherine_e_thier.jpg
+img: /media/capsule_voyage_avec_catherine_e_thier.compressed.jpg
 layout: project
 ordre: 9
 permalink: /projet-protegez-vous/
